--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://vinnitog.github.io/portfolio/dist",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d ./dist/"
   },
   "author": "Vinicius Tognoli",
   "license": "MIT"
